shift scoring to a dedicated screen
routes : create new state fo score-sheet.html
score-sheet : fix header in top of screen

--- a/css/style.css
+++ b/css/style.css
@@ -44,3 +44,11 @@
     font-size: 20px;
     color: dimgray
 }
+
+.ion-content-fixed-header {
+    margin-top: 43px;
+}
+
+.ion-content-below-fixed-header {
+    margin-top: 133px;
+}
