Set Game Name in score sheet header
tab-score :>> insert init_avatar function
>> reset avatar List on new player list edition
>> add reset button (empty for now)
score-sheet:>> set header name with game type

--- a/templates/score-sheet.html
+++ b/templates/score-sheet.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Score Board">
 
     <!-- NAV BAR : Title -->
-    <ion-nav-title>Registering Score</ion-nav-title>
+    <ion-nav-title>{{scrVM.curGame.name}}</ion-nav-title>
 
     <!-- NAV BAR : left Button -->
     <ion-nav-buttons side="left">
